update medical module 1

--- a/oncoFinder2/templates/medic/patient_treatment_pdf.html
+++ b/oncoFinder2/templates/medic/patient_treatment_pdf.html
@@ -121,9 +121,9 @@ function requestData{{treatment.id}}() {
 	    				      <div id="t_stage"><strong>Stage:</strong> '+ data["stage"]+'</div> \
 	    				      <div id="t_treatment"><strong>Treatment:</strong> '+ data["treatment"]+'</div> \
 	    				      <div id="t_cit"><strong>Citation(s):</strong> '+ data["citation"]+'</div> \
-	    				      <div id="t_org"><strong>Organization name:</strong> '+ data["organization_name"]+'</div> \
+	    				      <div id="t_org"><strong>Organization name:</strong> '+ data["organization_name"]+'</div>'
 	    				      
-	    					');
+	    					);
 	    			
 	    			var jsonArr = {
 	    					'num_of_patients': data['num_of_patients'],
