add fake form 4 OF3 testing

--- a/oncoFinder2/templates/document/document_detail.html
+++ b/oncoFinder2/templates/document/document_detail.html
@@ -49,6 +49,11 @@
 <a class="btn btn-default btn-sm " href="{{MEDIA_URL}}{{document.document}}">
       <span class="glyphicon glyphicon-download-alt"></span> &nbsp;<b>Download file</b>
      </a>
+     
+<a class="btn btn-warning btn-sm " href="{% url 'of3_calculation_parameters' document.id %}">
+      </span> &nbsp;<b>Test OF3 Calculation</b>
+     </a>
+     
 <div class="wrapper1">
         <div class="upper_scroll"></div>
        </div>
