--- a/oncoFinder2/templates/document/sample_detail.html
+++ b/oncoFinder2/templates/document/sample_detail.html
@@ -65,7 +65,7 @@
 	      Database: {{path.database}}
 	      <button class="btn btn-info btn-sm pull-right" data-toggle="modal" 
 	              data-target=".bs-example-modal-lg" 
-	              onClick="fetchPathwayDetails({{path.id}}, '{{path.name}}')">
+	              onClick="fetchPathwayDetails({{path.id}}, '{{path.name}}', 'default')">
 	        <span class="glyphicon glyphicon-eye-open"></span>
 	         &nbsp;Show details
 	      </button>
@@ -353,15 +353,22 @@ $(document).ready( function () {
     
 } );
 
-function fetchPathwayDetails(pathId, path_name)
+function fetchPathwayDetails(pathId, path_name, scale)
 {
 	$(".modal-title").text(path_name);
 	
+	var loader = '<p  class="text-center">Data is loading. Please wait<br/>\
+	<img src="/static/images/ajax-loader.gif" />\
+   </p>';
+	
+   $(".modal-body").html(loader);
+   
 	$.post("/document/ajaxpathdetail/",
 			{
 		     pathway: pathId,
 		     docpath: '{{docpath}}',
-		     sample_name: '{{sample_name}}'		
+		     sample_name: '{{sample_name}}',
+		     scale: scale
 			},
 			function(data){
 				$(".modal-body").html(data);
