--- a/oncoFinder2/static/css/style.css
+++ b/oncoFinder2/static/css/style.css
@@ -145,11 +145,11 @@
 .single_tumour_li{
 	border: 1px solid #ccc;
 	padding: 5px;
-	margin: 5px; 
-	
-	
+	margin: 5px; 	
 }
-
+.norm-select{
+	height: 200px;
+}
 /***************** DATABASE */
 
 .pathway_list_ul {
