--- a/oncoFinder2/templates/database/pathway_list.html
+++ b/oncoFinder2/templates/database/pathway_list.html
@@ -21,6 +21,9 @@
                     <button type="button" class="btn btn-primary human biocarta" onClick="location.href='/db/pathways/human/biocarta/'">Biocarta</button>
                     <button type="button" class="btn btn-primary human reactome" onClick="location.href='/db/pathways/human/reactome/'">Reactome</button>
                 </div>
+                <div class="btn-group btn-group-xs">
+                    <button type="button" class="btn btn-primary human sandbox" onClick="location.href='/db/pathways/human/sandbox/'">Sandbox</button>
+                </div>
             </td>
         </tr><tr>
             <td class="of-table-key">Mouse:</td>
