add AZ report 3 add paths

--- a/oncoFinder2/templates/report/report_detail.html
+++ b/oncoFinder2/templates/report/report_detail.html
@@ -507,7 +507,7 @@ $(function() {
 			false, 'down', 'venn_path_dinamic_{{perm.strip}}', 'pathways', '{{report.organism}}');
     {%endfor%}
     
- // METABOLIC PATHs
+ /* METABOLIC PATHs
   drawPathwayTable({{report.id}},
 		  'tbl-meta_all', 
 	         'all', 
@@ -523,7 +523,7 @@ $(function() {
 			'{{perm.strip}}',
 			true, 'down', 'venn_meta_dinamic_{{perm.strip}}', 'pathways', '{{report.organism}}');
     {%endfor%}
-
+*/
 });
 
 </script>
